Atualização para aCis 382