@@ -3,7 +3,7 @@ title aCis gameserver console
 :start
 REM -------------------------------------
 REM Default parameters for a basic server.
-java -XX:+UseConcMarkSweepGC -Xmx2G -cp ./libs/*; net.sf.l2j.gameserver.GameServer
+java -Xmx2G -cp ./libs/*; net.sf.l2j.gameserver.GameServer
 REM -------------------------------------
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
